[package]
name = "game-gl"
version = "0.1.0"
authors = ["Philipp Kaiser"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
glutin = { git = "https://github.com/Zhenghui-SUN/glutin" }
# glutin = { path = "../../sunzhenghui-glutin/glutin/glutin" }
log = "0.4.8"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { git = "https://github.com/Zhenghui-SUN/android-ndk-rs" }
ndk-sys = { git = "https://github.com/Zhenghui-SUN/android-ndk-rs" }
# ndk-glue = { path = "../../sunzhenghui-android-ndk-rs/android-ndk-rs/ndk-glue" }
# ndk-sys = { path = "../../sunzhenghui-android-ndk-rs/android-ndk-rs/ndk-sys" }

[build-dependencies]
gl_generator = "0.14.0"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]